# desafio-gslab

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: gslab.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/contrib/: env-ci-sample  env-db-sample  env-dev-sample
backend/products/: conftest.py  settings.py  urls.py
backend/products/core/: admin.py  models.py
backend/products/core/api/: urls.py
backend/products/core/api/v1/: serializers.py  viewsets.py
backend/products/core/api/v1/tests/: test_viewsets.py
backend/products/core/migrations/: 0001_initial.py  0002_auto_20210208_0900.py
backend/products/core/tests/: test_models.py
frontend/: .prettierrc.js  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: main.js
frontend/src/components/Login/: Login.vue
frontend/src/components/Navbar/: Navbar.vue
frontend/src/components/Products/: Products.vue
frontend/src/router/: index.js
frontend/src/services/: auth.js  index.js  products.js
frontend/src/utils/: formatters.js
frontend/src/views/: Home.vue  Login.vue
